--- a/index.html
+++ b/index.html
@@ -410,12 +410,12 @@
             </div>
 
             <div class="icon-wrapper">
-              <a href="https://www.linkedin.com/in/ek-gupta-50560920a/"
+              <a href="https://www.linkedin.com/in/anurag-kumar-b6969725b/"
                 ><i class="fa-brands fa-linkedin icon" href=""></i
               ></a>
-              <a href="https://github.com/abhi4418"><i class="fa-brands fa-github icon"></i></a>
-              <a href="https://twitter.com/ekG202004"><i class="fa-brands fa-twitter icon"></i></a>
-              <a href="https://www.instagram.com/ek9f"><i class="fa-brands fa-instagram icon"></i></a>
+              <a href="https://github.com/anuragak021/"><i class="fa-brands fa-github icon"></i></a>
+              <a href="https://twitter.com/anuragak021"><i class="fa-brands fa-twitter icon"></i></a>
+              <a href="https://www.instagram.com/anuragkishere/"><i class="fa-brands fa-instagram icon"></i></a>
               <a href="mailto:ekg202004@gmail.com"><i class="fa-regular fa-envelope icon"></i></a>
             </div>
           </div>
