Site changes (text)

--- a/index.html
+++ b/index.html
@@ -131,8 +131,7 @@
               <h2 class="project-heading">BRABUS</h2>
 
               <p class="project-subHeading">
-                Its is a car modification company which modify your exhaust , to make it sound better 
-                your engines are made to run smoothly as well. 
+                With MealMate Elevate your dining experience with our online food ordering platform, offering a diverse menu and seamless delivery. 
               </p>
               <div class="btn-grp">
                 <button class="btn-pink btn-project">Read More</button>
@@ -275,10 +274,10 @@
                   alt=""
                 />
               </div>
-              <h2 class="project-heading">PC parts</h2>
+              <h2 class="project-heading">BRABUS</h2>
               <p class="project-sub-heading">
-                 a Wesite for an online store offering top-quality PC parts for gaming, 
-                content creation, or building your PC.
+                Its is a car modification company which modify your exhaust , to make it sound better 
+                your engines are made to run smoothly as well. 
               </p>
               <div class="btn-group">
                 <button class="btn-pink btn-project">Read More</button>
