--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 />
               </div>
 
-              <h2 class="project-heading">BRABUS</h2>
+              <h2 class="project-heading">MealMate</h2>
 
               <p class="project-subHeading">
                 With MealMate Elevate your dining experience with our online food ordering platform, offering a diverse menu and seamless delivery. 
